[project]
name = "lr1-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Phos",email = "esquelat@gmail.com"}
]
readme = "README.md"
# Cambia esto a una versión que Vercel soporte (ej. 3.12)
requires-python = ">=3.12,<3.13" 
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"